--- a/dormify.html
+++ b/dormify.html
@@ -65,7 +65,7 @@
 
     <section class="content-container">
         <div class="content">
-            <h1 class="content-heading">RESEARCH</h1>
+            <h1 class="content-heading">RESEARCH AND FRAMING</h1>
             <p class="c1">To begin the process we started by narrowing down our target audience to college students.
                 This is was done to work within a small scope of the many audience dormify targeted. Plus they were more
                 easily accessible for our upcoming research.</p>
