--- a/dormify.html
+++ b/dormify.html
@@ -66,16 +66,15 @@
     <section class="content-container">
         <div class="content">
             <h1 class="content-heading">RESEARCH AND FRAMING</h1>
-            <p class="c1">To begin the process we started by narrowing down our target audience to college students.
-                This is was done to work within a small scope of the many audience dormify targeted. Plus they were more
+            <p class="c1">To begin the process, we started by narrowing down our target audience to college students.
+                This is was done to work within a small scope of the many audience dormify targeted. Plus, they were more
                 easily accessible for our upcoming research.</p>
             <p class="c2">Moving into college can be exciting yet nervous experience especially for students moving far
                 away from home. In an informal conversation had by myself and a student, they expressed how important it
                 is for their dorm rooms to feel like home, especially after a long day of class.</p>
             <br>
             <p class="c3">“I’ve never really been the one to care about the look of my room, but ever since moving into
-                college that became an important aspect given I spend all my time there when I’m not in class, and with
-                the help of some of my friends I was able to make my room that place I never felt like leaving”</p>
+                college that became an important aspect given I spend all my time there when I’m not in class.</p>
             <br>
             <p class = "p-para">To further inform this, we conducted in-person interviews and a survey with 70 students. Our criteria for
                 this was that they either have to be living in dorms or once did. </p>
@@ -85,7 +84,7 @@
             <!-- parent div class -->
             <div class="content1">
                 <h1 class="content-heading">INSIGHT</h1>
-                <p class="c7">From our research we discovered 3 problems that we founf interesting </p>
+                <p class="c7">From our research we discovered 3 problems that we found interesting </p>
 
                 <!-- rect div class -->
                 <div class="rect">
@@ -124,11 +123,11 @@
             <div class="content2">
                 <p class="sub-solu3">FIRST FRAMING</p>
                 <h1 class="first-reframe">FRAMING THE PROBLEM</h1>
-                <p class="c8">We particularly found insight 2 more insightful and saw an opportunity to help students
+                     <p class="c8">We particularly found insight 2 more insightful and saw an opportunity to help students
                     make their dorm rooms truly reflect who they are, and turn this regular space into their comfort
                     space. So, we began to ask ourselves</p>
-                <p class="hmw2">How might we help college students in making better decisions about their dorm rooms in
-                    order to -----</p>
+                
+                <p class="hmw2">How might we help college students in making better decisions about their dorm rooms?</p>
             </div>
         </section>
     </section>
@@ -166,7 +165,7 @@
                 <p class="sub-solu3">SECOND FRAMING</p>
                 <h1 class="content-head">REFRAMING THE PROBLEM</h1>
                 <p class="c11">For our second reframe we decided to take a step back and tackle the problem of dorm room
-                    sizes centered around insight 3</p>
+                    sizes centered around insight 3:</p>
             </div>
             <div class="rect4">
                 <p class="c12">We also noted that there was a huge comparison between their rooms at home and the dorm
@@ -179,25 +178,19 @@
 
     <section class="content-container">
         <div class="reframe2">
-            <p class="c13">Dorm room sizes are a problems, and with students looking to decorate their rooms to suit
+            <p class="c13">Dorm room sizes is an apparent issue, and with students looking to decorate their rooms to suit
                 their taste, this poses a huge problem as they may not know how properly place items within their rooms
                 making them unsatisfied with their rooms</p>
             <p class="c14">In conducting further research we were interested in knowing how confident students felt in
-                the use of their spaces and if they care about how things are laid out within their spaces</p>
+                the utilization of their spaces, and if they care about how things are laid out within their spaces</p>
         </div>
     </section>
 
     <section class="content-container">
         <div class="content-r">
             <h1 class="content-heading">RESULTS</h1>
-            <p class="c15">From our research we discovered 3 problems that we founf interesting </p>
             <div class="rect5">
-                <p class="c16">68% of students as opposed to 32% feel the do now know how to utilize their space
-                    properly.</p>
-            </div>
-
-            <div class="rect6">
-                <p class="c16">68% of students as opposed to 32% feel the do now know how to utilize their space
+                <p class="c16">68% of students as opposed to 32% feel they do know how to utilize their space
                     properly.</p>
             </div>
 
@@ -251,7 +244,7 @@
                     <h1 class="content-heading2">CURATED FEED</h1>
                 </div>
             </div>
-            <p class="c22">Pinterest and Youtube are the most places people visit when looking for inspiration. Learning from Pinterest, we this as an opportunity to not only gain more traction within the website, but also to avoid the extra step of by creating a curated feed. The feed exist within the website consisting of different media uploaded by dormify customers. It showcases how they styles their dormify products and what they paired with it to give other inspiration and  </p>
+            <p class="c22">Pinterest and Youtube are some of the popular places people visit when looking for inspiration. Learning from Pinterest, we created a curated feed. The feed exist within the website consisting of different media uploaded by dormify customers. It showcases how they styles their dormify products and what they paired with it to give other inspiration and  </p>
         </div>
     </section>
 
