--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
     <section class="wrapper">
         <div class="my-bio">
             <h1 class="bio-heading">
-                Hi There, I’m <span class="name-color">Claret.</span><span class="name-hover"><img
-                        src="img/Claret-2.jpg" class="img-me"></span>It’s nice to meet you! I’m a UX and Graphic
+                Hi There, I’m <span class="name-color">Claret</span> and it’s nice to meet you! I’m a UX and Graphic
                 designer currently studying at Simon Fraser University (SFU), and you are welcome to my space where you
                 gain an insight of my creative process.
             </h1>
@@ -56,15 +55,6 @@
                     ISERS
                     BUT ALSO CREAT AN EMOTIONAL BOND BETWEEN USERS AND THE PRODUCTS</p>
             </div>
-
-            <div class="contact">
-                <a href="mailto:cea29@sfu.ca" class = "email">
-                    <p>EMAIL</p>
-                </a>
-                <a href="mailto:cea29@sfu.ca" class = "resume">
-                <p>RESUME</p></a>
-
-            </div>
         </div>
     </section>
 
@@ -78,10 +68,10 @@
                 <p>SCROLL TO VIEW PROJECTS</p>
             </div>
 
-            <!-- <div class="me">
+            <div class="me">
                 <a href="mailto:cea29@sfu.ca"><input type="button" value="Email" class="email_btn"></a>
-                <input type="button" value="resume" class="resume_btn">
-            </div> -->
+                <a href = "img/Resume.pdf"><input type="button" value="resume" class="resume_btn"></a>
+            </div>
         </div>
     </section>
 
@@ -125,11 +115,6 @@
                 </div>
                 <!-- end of poster -->
 
-                <div class="project-dormify">
-                    <h3 class="riot-heading">RIOT games</h3>
-                    <p class="riot-logline">experience design, content design, user research </p>
-                    <a href="posters.html"><img src="img/riot.png" height="800" width="833"></a>
-                </div>
                 <!-- end of project-dormify -->
             </div>
             <!-- end of container -->
