--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <section class="wrapper">
         <div class="my-bio">
             <h1 class="bio-heading">
-                Hi There, I’m <span class="name-color">Claret</span> and it’s nice to meet you! I’m a UX and Graphic
+                Hi There, I’m <span class="name-color">Claret</span><img src = "Claret-colored.jpg" class="img-me"></span> and it’s nice to meet you! I’m a UX and Graphic
                 designer currently studying at Simon Fraser University (SFU), and you are welcome to my space where you
                 gain an insight of my creative process.
             </h1>
@@ -43,17 +43,17 @@
     <section class="wrapper">
         <div class="info">
             <div class="my-description">
-                <!-- <p> I began my design journey 3 years ago at the program of the School of Interactive Arts and Technology at
-                SFU. Since then I have most especially come to enjoy and appreciate one thing - THE DESIGN PROCESS - As
+                <p> I began my design journey 3 years ago at the program of the School of Interactive Arts and Technology at
+                SFU. Since then I have most especially come to enjoy and appreciate one thing - <b>THE DESIGN PROCESS</b> - As
                 a growing designer, I continuously strive to create compelling visuals that not only meets the needs of
-                people but also to create an emotional bond between users and the product.</p> -->
+                people but also to create an emotional bond between users and the product.</p>
 
-                <p>I BEGAN MY DESIGN JOURNEY 3 YEARS AGO AT THE SCHOOL OF INTERACTIVE ARTS AND TECHNOLOGY AT SFU. SINCE
+                <!-- <p>I BEGAN MY DESIGN JOURNEY 3 YEARS AGO AT THE SCHOOL OF INTERACTIVE ARTS AND TECHNOLOGY AT SFU. SINCE
                     THEN
                     I HAVE MOST ESPECIALLY COME TO ENJOY AND APPRECIATE ONE THE - THE DESIGN PROCESS - AS A GROWING
                     DESIGNER, I CONTINOUSLY STRIVE TO CREATE COMPELLING VISUALS THAT NOT ONLY MEETS THE NEEDS OF THE
                     ISERS
-                    BUT ALSO CREAT AN EMOTIONAL BOND BETWEEN USERS AND THE PRODUCTS</p>
+                    BUT ALSO CREAT AN EMOTIONAL BOND BETWEEN USERS AND THE PRODUCTS</p> -->
             </div>
         </div>
     </section>
