--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <section class="wrapper">
         <div class="my-bio">
             <h1 class="bio-heading">
-                Hi There, I’m <span class="name-color">Claret</span><img src = "Claret-colored.jpg" class="img-me"></span> and it’s nice to meet you! I’m a UX and Graphic
+                Hi There, I’m <span class="name-color">Claret</span> and it’s nice to meet you! I’m a UX and Graphic
                 designer currently studying at Simon Fraser University (SFU), and you are welcome to my space where you
                 gain an insight of my creative process.
             </h1>
