--- a/dormify.html
+++ b/dormify.html
@@ -63,6 +63,18 @@
         </div>
     </section>
 
+    <section>
+        <div class="case-study2">
+            <div class="teammates">
+                <h3 class="mem-team">Contribution</h3>
+                <p class="mem">UI Design</p>
+                <p class="mem">User experience</p>
+                <p class="mem">User research</p>
+                <p class="mem">Content Strategy</p>
+            </div>
+        </div>
+    </section>
+
     <section class="content-container">
         <div class="content">
             <h1 class="content-heading">RESEARCH AND FRAMING</h1>
