--- a/dormify.html
+++ b/dormify.html
@@ -41,7 +41,7 @@
             <p class="dormify-para">Dormify is an online website which aims to offer affordable furniture to people with
                 small spaces while still helping them make their spaces aesthetically pleasing. For this 4-week project
                 we were tasked with intervening in a problem area by constantly reframing of a problem statement. From
-                this resulted 3 different solutions from 3 different reframes that we believe ultimately meets the need
+                this resulted 3 different solutions from 3 different reframes that we believed ultimately meets the need
                 of the users. </ </div>
 
             <div class="about">
@@ -87,6 +87,7 @@
             <br>
             <p class="c3">“I’ve never really been the one to care about the look of my room, but ever since moving into
                 college that became an important aspect given I spend all my time there when I’m not in class.</p>
+            <p class="c19">- Student at SFU University</p>
             <br>
             <p class = "p-para">To further inform this, we conducted in-person interviews and a survey with 70 students. Our criteria for
                 this was that they either have to be living in dorms or once did. </p>
