--- a/index.html
+++ b/index.html
@@ -81,13 +81,13 @@
                 <div class="project-tp">
                     <h3 class="tp-heading">Touchpoint</h3>
                     <p class="tp-logline">experience design, content design, user research </p>
-                    <a href="touchpoint.html"><img src="img/touchpoint-p.png" class="tp-img"></a>
+                    <a href=https://www.touchpointsfu.ca/"><img src="img/touchpoint-p.png" class="tp-img"></a>
                 </div>
                 <!-- end of project-dormify -->
                 <!-- beginning of posters -->
                 <div class="project-dormify">
                     <h3 class="dormify-heading">Dormify</h3>
-                    <p class="dormify-logline">experience design, content design, user research </p>
+                    <p class="dormify-logline">Visual Identity</p>
                     <a href="dormify.html"><img src="img/drm.png" class="dormify-img"></a>
                 </div>
                 <!-- end of poster -->
