--- a/touchpoint.html
+++ b/touchpoint.html
@@ -41,10 +41,6 @@
             <p class="dormify-para">Touchpoint is an annual design conference hosted by SIAT in collaboration with SFU.
                 For this years conference. For this years direction we experiment on a series </ </div>
 
-            <div>    
-                <a href = "https://www.touchpointsfu.ca/" class = "view-project">View website</a>
-                   
-            </div>
 
             <div class="about2">
                 <p class = "p-title">Design conference</p>
@@ -65,17 +61,12 @@
     <section class="content-container">
         <div class="content">
             <h1 class="conference-heading">TOUCHPINT CONFERENCE</h1>
-            <p class="c1">To begin the process, we started by narrowing down our target audience to college students.
-                This is was done to work within a small scope of the many audience dormify targeted. Plus, they were more
-                easily accessible for our upcoming research.</p>
-            <p class="c2">Moving into college can be exciting yet nervous experience especially for students moving far
-                away from home. In an informal conversation had by myself and a student, they expressed how important it
-                is for their dorm rooms to feel like home, especially after a long day of class.</p>
-            <br>
-            <p class="c3">“I’ve never really been the one to care about the look of my room, but ever since moving into
-                college that became an important aspect given I spend all my time there when I’m not in class.</p>
-            <br>
-            <p class = "p-para">To further inform this, we conducted in-person interviews and a survey with 70 students. Our criteria for
-                this was that they either have to be living in dorms or once did. </p>
+            <p class="c1">Touchpoint is an annual design conference hosted by SIAT in collaboration with SFU.
+                For this years conference. For this years direction we experiment on a series </p>  
+        </div>
+
+        <div>    
+            <a href = "https://www.touchpointsfu.ca/" class = "view-project">View website</a>
+               
         </div>
 </section>
