--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <div class="project-tp">
                     <h3 class="tp-heading">Touchpoint</h3>
                     <p class="tp-logline">experience design, content design, user research </p>
-                    <a href=https://www.touchpointsfu.ca/"><img src="img/touchpoint-p.png" class="tp-img"></a>
+                    <a href="https://www.touchpointsfu.ca/"><img src="img/touchpoint-p.png" class="tp-img"></a>
                 </div>
                 <!-- end of project-dormify -->
                 <!-- beginning of posters -->
