--- a/dormify.html
+++ b/dormify.html
@@ -242,7 +242,7 @@
                 <p class="c19">- Student at Kent state universiy</p>
                 <br>
                 <p class="c20">Inspired by the quote from a Kent State student we asked the question of:</p>
-                <p class="hmw3">How might we help students plan and understand their dorm rooms based on space constraints?
+                <p class="hmw3">How might we help students in planning and decorate their spaces in a way that suits them?"
                 </p>
                 <p class = "c21">Individuals looking to furnish their dorm rooms often lack initial inspiration and often find it difficult to find resources on how to decorate their room.</p>
             </div>
