--- a/dormify.html
+++ b/dormify.html
@@ -238,7 +238,7 @@
             <div class="content2">
                 <p class="sub-solu3">THIRD REFRAME</p>
                 <h1 class="content-head2">REFRAMING THE PROBLEM</h1>
-                <p class="c18">“I am overwhelmed by the amount of places there are to shop, but don’t know where to start figuring out what I need in my room”</p>
+                <p class="c18">“I am overwhelmed by the amount of places there are to shop, but don’t know where to start figuring out what I need in my room</p>
                 <p class="c19">- Student at Kent state universiy</p>
                 <br>
                 <p class="c20">Inspired by the quote from a Kent State student we asked the question of:</p>
