--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 <body>
     <!-- my logo -->
     <header>
-        <nav class="wrapper-nav">
-            <div class="logo">
+        <div class="wrapper-nav">
+            <nav class="logo">
                 <h4>C.</h4>
             </div>
         </nav>
